video mais leve

--- a/src/app/components/page/banner/banner.component.html
+++ b/src/app/components/page/banner/banner.component.html
@@ -6,7 +6,7 @@
   onloadedmetadata="this.muted = true"
   class="hero-video"
 >
-  <source src="/video.mp4" type="video/mp4" />
+  <source src="/CAPA.webm" type="video/webm" />
   Seu navegador não suporta vídeos HTML5.
 </video>
 
