--- a/src/app/components/page/sessao-inicio/sessao-inicio.component.html
+++ b/src/app/components/page/sessao-inicio/sessao-inicio.component.html
@@ -14,7 +14,7 @@
     <video *ngIf="!showFallback" #videoEl autoplay muted loop playsinline preload="auto"
         [poster]="'assets/img/poster.jpg'" controlslist="nodownload nofullscreen noremoteplayback"
         disablepictureinpicture>
-        <source src="CAPA.mp4" type="video/mp4" />
+        <source src="CAPA.webm" type="video/webm" />
         <!-- <source src="hero.webm" type="video/webm" /> -->
         Seu navegador não suporta vídeos HTML5.
     </video>
