--- a/src/app/components/page/sessao-inicio/sessao-inicio.component.html
+++ b/src/app/components/page/sessao-inicio/sessao-inicio.component.html
@@ -15,7 +15,7 @@
         [poster]="'assets/img/poster.jpg'" controlslist="nodownload nofullscreen noremoteplayback"
         disablepictureinpicture>
         <source src="CAPA.webm" type="video/webm" />
-        <!-- <source src="hero.webm" type="video/webm" /> -->
+        <source src="CAPA.mp4" type="video/mp4" />
         Seu navegador não suporta vídeos HTML5.
     </video>
 
