--- a/src/app/components/page/pesquisa/pesquisa.component.html
+++ b/src/app/components/page/pesquisa/pesquisa.component.html
@@ -1,15 +1,10 @@
- <a class="whatsapp-icon" href="https://wa.me/message/VNW7PUPYRVTJA1" target="_blank"
-    aria-label="Fale conosco pelo WhatsApp">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
-  </a>
-
   <!-- Menu -->
 
   <div class="header">
     <nav class="navbar navbar-expand-lg navbar-dark bg-navFKB">
       <div class="container-fluid">
         <!-- Logo ou título (opcional) -->
-        <a class="navbar-brand" href="index.php">FKB</a>
+        <a class="navbar-brand" href="/">FKB</a>
 
         <!-- Botão hambúrguer para mobile -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
