--- a/src/app/components/page/sessao-inicio/sessao-inicio.component.html
+++ b/src/app/components/page/sessao-inicio/sessao-inicio.component.html
@@ -26,4 +26,8 @@
     <div class="overlay">
         <app-button-list></app-button-list>
     </div>
+     <a class="whatsapp-icon" href="https://wa.me/message/VNW7PUPYRVTJA1" target="_blank"
+    aria-label="Fale conosco pelo WhatsApp">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
+  </a>
 </section>
