--- a/src/app/components/page/novo-nav-bar/novo-nav-bar.component.html
+++ b/src/app/components/page/novo-nav-bar/novo-nav-bar.component.html
@@ -41,7 +41,7 @@
       <a href="#cursos" class="text-decoration-none text-reset">GRADUAÇÃO</a>
       <!-- <a href="#" class="text-decoration-none text-reset" (click)="showAlert('Pós-Graduação')">PÓS-GRADUAÇÃO</a>
            <a href="#" class="text-decoration-none text-reset" (click)="showAlert('Cursos Livres')">CURSOS LIVRES</a> -->
-      <a href="/pesquisa" class="text-decoration-none text-reset">PESQUISAS</a>
+      <a href="/pesquisar" class="text-decoration-none text-reset">PESQUISAS</a>
 
       <div class="dropdown">
         <a class="dropdown-toggle text-decoration-none text-reset" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -96,7 +96,7 @@
     <a href="#" class="text-decoration-none text-reset" (click)="showAlert('Graduação'); toggleMenu()">GRADUAÇÃO</a>
     <!-- <a href="#" class="text-decoration-none text-reset" (click)="showAlert('Pós-Graduação'); toggleMenu()">PÓS-GRADUAÇÃO</a> -->
     <!-- <a href="#" class="text-decoration-none text-reset" (click)="showAlert('Cursos Livres'); toggleMenu()">CURSOS LIVRES</a> -->
-    <a href="/pesquisa" class="text-decoration-none text-reset">PESQUISAS</a>
+    <a href="/pesquisar" class="text-decoration-none text-reset">PESQUISAS</a>
 
     <div class="dropdown">
       <a class="dropdown-toggle text-decoration-none text-reset" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
