--- a/src/app/components/page/pesquisar/pesquisar.component.scss
+++ b/src/app/components/page/pesquisar/pesquisar.component.scss
@@ -5,13 +5,13 @@
 .hero-pesquisa {
     width: 100%;
     height: 100dvh;
-    background-image: url('../img/bannerPesquisa.png');
+    background-image: url('../bannerPesquisa.png');
     background-size: 100% 100%;
 }
 
 .cont-main-pesquisa {
   padding-block: 50px;
-  background-image: url('../img/fundoPesquisa.png');
+  background-image: url('../fundoPesquisa.png');
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -19,7 +19,7 @@
 /* Quando a tela tiver no máximo 700px */
 @media (max-width: 700px) {
   .hero-pesquisa {
-    background-image: url('../img/fundoPesquisa-mobile.png'); 
+    background-image: url('../fundoPesquisa-mobile.png'); 
     background-size: 100% 100%;
   }
 }
