Correção da lista de links pesquisar

--- a/src/app/components/page/pesquisar/pesquisar.component.html
+++ b/src/app/components/page/pesquisar/pesquisar.component.html
@@ -19,16 +19,16 @@
               <a class="nav-link" href="/">INÍCIO</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#" (click)="mostrarAvisoManutencao()">REVISTA ELETRÔNICA</a>
+              <a class="nav-link" (click)="mostrarAvisoManutencao()">REVISTA ELETRÔNICA</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#" (click)="mostrarAvisoManutencao()">ENSINO, PESQUISA E INOVAÇÃO</a>
+              <a class="nav-link" (click)="mostrarAvisoManutencao()">ENSINO, PESQUISA E INOVAÇÃO</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#" (click)="mostrarAvisoManutencao()">APOIO PSICOPEDAGÓGICO</a>
+              <a class="nav-link" (click)="mostrarAvisoManutencao()">APOIO PSICOPEDAGÓGICO</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#" (click)="mostrarAvisoManutencao()">SUPERVISÃO DE ESTÁGIO</a>
+              <a class="nav-link" (click)="mostrarAvisoManutencao()">SUPERVISÃO DE ESTÁGIO</a>
             </li>
           </ul>
         </div>
