Atualização do diploma

--- a/src/app/components/page/novo-nav-bar/novo-nav-bar.component.html
+++ b/src/app/components/page/novo-nav-bar/novo-nav-bar.component.html
@@ -1,7 +1,9 @@
 <!-- Cabeçalho -->
 <div class="px-4 ps-lg-5 py-3 cor position-relative">
   <div class="d-flex principal justify-content-between align-items-center">
-    <img src="fkbvetorizado.svg" alt="Faculdades FKB" style="height: 50px;" />
+    <a href="/">
+      <img src="fkbvetorizado.svg" alt="Faculdades FKB" style="height: 50px;" />
+    </a>
 
     <!-- Menu Desktop -->
     <div class="d-none d-lg-flex gap-3 fw-bold me-4">
