--- a/src/app/components/page/dou/dou.component.html
+++ b/src/app/components/page/dou/dou.component.html
@@ -3,7 +3,7 @@
   <h1 class="title">Diploma</h1>
 
   <div class="actions">
-    <button class="btn btn-blue" (click)="showAlert()">Consulta retirada</button>
+    <a class="btn btn-blue" href="/diploma-list">Consulta retirada</a>
     <a class="btn btn-green" href="/diploma-viewer">Emitir Diploma Digital</a>
   </div>
 
