--- a/src/app/components/page/diploma-viewer/diploma-viewer.component.html
+++ b/src/app/components/page/diploma-viewer/diploma-viewer.component.html
@@ -1,11 +1,19 @@
 <app-novo-nav-bar />
+
+<!-- NAVEGAÇÃO BREADCRUMB ADICIONADA -->
+<nav class="breadcrumb-nav">
+  <a [routerLink]="['/diploma']" class="breadcrumb-link">Diplomas</a>
+  <span class="breadcrumb-separator">/</span>
+  <span class="breadcrumb-active">Visualização Digital</span>
+</nav>
+
 <div class="background-blur"></div>
 
-<iframe 
+<iframe
     id="assinamos_iframe"
     [src]="iframeSrc"
-    width="100%" 
-    height="550px" 
+    width="100%"
+    height="550px"
     title="Consulta Diploma"
     frameborder="0">
 </iframe>
